<resources>
    <string name="app_name">Review 01</string>
    <string name="title_username">User Name:</string>
    <string name="title_password">Password:</string>
    <string name="title_login">Login</string>
    <string name="hint_username">Enter your username</string>
    <string name="hint_password">Enter your password</string>
    <string name="title_product_management">Product Management</string>
    <string name="menu_add_product">Add Product</string>
    <string name="menu_about">About</string>
    <string name="title_product_name">Product Name:</string>
    <string name="titlte_product_code">Product Code:</string>
    <string name="title_product_code">Product Code:</string>
    <string name="title_save">Save</string>
    <string name="title_product_price">Price:</string>
    <string name="title_product_quantity">Quantity:</string>
    <string name="title_product_details">Product Details</string>
</resources>